--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -4,7 +4,8 @@ After that, all subsequent sections will be turned into appendices. -->
 
 # SamSim MODEL DOCUMENTATION {#app:third-appendix}
 
-SamSim is the closed loop simulation model used for the Interior Fraser Coho case study. A model overview and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). The following text decribes the model equations and phases. The model indexes and quantities are defined in table XX and input parameters used for the Interior Fraser Coho study case are listed in table XX. Detailed definitions of the model parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme) 
+SamSim is the closed loop simulation model used for the Interior Fraser Coho case study. A model overview and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). This appendix decribes the model equations relevant to this document. The model indexes and quantities are defined in Table \@ref(tab:modvar) and input parameters used for the Interior Fraser Coho study case are listed in Table \@ref(tab:parval). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
+
 
 <!----> 
 \begin{table}[ht]
@@ -27,6 +28,7 @@ $\beta_{k}$ & Ricker carrying capacity inverse\\
 $\sigma_{k}$ & Recruitment model standard deviation\\
 $w_{y,k}$ & Recruitment deviations\\
 \hline
+(\#tab:modvar)
 \end{tabular}
 \end{table}
 
@@ -47,6 +49,7 @@ $RSc$ & Scalar used to cap High recruitment values & CapScalar &3\\
 $\rho$ & temporal autocorrealtion coefficient & rho & 0\\
 \hline
 \end{tabular}
+(\#tab:parval)
 \end{table}
 
 
@@ -57,20 +60,16 @@ Define data used in IF cohoPars is any of the data columns not defined?
 Need to ask: where is the function that reads in the data. Maybe called by genericrecoverySim
 
 
-### Initialization 
+### Model Priming
 
-The initialization phase includes only past data and is used to represent real and observed abundances to prime the simulation trials. This phase loops over a number of past years ('nPrime') and reconstructs recruitment time series for past years. The simulations can be initialized in two ways: with existing recruitment data or with set parameters if recruitment data is not available. During the initialization phase three types of CU specific data tables are populated: Spawners, Recruits, Catch and Exploitation Rate.  
- 
-Priming loop - starts at line 779
+The proming phase, or model initialization, represents the past data for CUs being modeled. It is used to represent real and observed abundances before starting the simulation trials. This phase loops over a number of past years ('nPrime') and reconstructs recruitment time series for past years. The simulations can be initialized in two ways: with existing recruitment data or with user defined parameters, if recruitment data is not available. During the initialization phase three types of CU specific data tables are populated: Spawners ($S_{y,k}$), Recruits ($RBY_{y,k}$, Catch and Exploitation Rate.  
 
-#### Available recruitment data
+#### Available Recruitment Data
 
-If spawner recruitment data is avalable, the number of initialization years 'nPrime' is defined based on the length of the longest CU time series available. The Spawners, Recruits, Catch and Exploitation Rate objects are populated with the input data. If catch or expoitation rate data are not available, those values are set to zero.
+If spawner  ($RBY_{y,k}$recruitment data is avalable, the number of initialization years 'nPrime' is defined based on the length of the longest CU time series available. The Spawners, Recruits, Catch and Exploitation Rate objects are populated with the input data. If catch or expoitation rate data are not available, those values are set to zero.
 
 
-
-
-#### No Recruitment data
+#### No Recruitment Data
 
 When Recruitment data is not available, the 'nPrime' is set to 10x the maximum age of recruits. The number of Spawners can be initialized by the user or otherwise is set at equilibrium for the first 6 years and then calculated based on recruitment in the previous years (equation \@ref(eq:Seqinit)). If the calculated number of spawners is lower than the user inputted extinction threshold (`extinctThresh`), then the number of spawners is set o zero. 
 
@@ -105,7 +104,7 @@ Three versions of the recruitment curve are available: A simple Ricker curve (eq
 \end{equation}
 
 
-For the Ricker model with the survival covariate, the covariates for each calendar year are generated following a normal distribution with user defined mean and variance (equation \@ref(eq:survCY)). The brood year survival covariate is currently populated following the dominant life history types from Interior Fraser Coho. Fish with a 3-year life cycle differ from those with a 4-year life cycle in the number of years spent in freshwater as juveniles; both life cycles spend 18 months at sea before returning to spawn. Fish with a 2-year life cycle spend only 6 months at sea before returning as jacks. This life history results in the survival covariate being lagged by one year for ages 2 and 3 (ref diagram and equation \@ref(eq:surv)). The exception is the first two years of the priming loop, when no lag is applied.
+For the Ricker model with the survival covariate, the covariates for each calendar year are generated following a normal distribution with user defined mean and variance (Equation \@ref(eq:survCY)). The brood year survival covariate is currently populated following the dominant life history types from Interior Fraser Coho. Fish with a 3-year life cycle differ from those with a 4-year life cycle in the number of years spent in freshwater as juveniles; both life cycles spend 18 months at sea before returning to spawn. Fish with a 2-year life cycle spend only 6 months at sea before returning as jacks. This life history results in the survival covariate being lagged by one year for ages 2 and 3 (Figure \@ref(fig:cohosurvivaldiagram) and Equation \@ref(eq:surv)). The exception is the first two years of the priming loop, when no lag is applied.
  
 \begin{align}
   SurvCY_{y} &\sim N(\mu_{Surv},\sigma_{Surv})
@@ -115,7 +114,7 @@ For the Ricker model with the survival covariate, the covariates for each calend
 \begin{align}
 Surv_{y,j} = 
 \begin{cases}
- SurvCY_{y-1} & \text{if} j\leq 3 \\
+ SurvCY_{y-1} & \text{if } j\leq 3 \\
  SurvCY_{y} & \text{otherwise}
 \end{cases}
  (\#eq:surv)
