--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -4,7 +4,7 @@ After that, all subsequent sections will be turned into appendices. -->
 
 # SamSim MODEL DOCUMENTATION {#app:third-appendix}
 
-SamSim is the closed loop simulation model used for the Interior Fraser Coho case study. A model overview and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). This appendix decribes the model equations relevant to this document. The model indexes and quantities are defined in Table \@ref(tab:modvar) and input parameters used for the Interior Fraser Coho study case are listed in Table \@ref(tab:parval). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
+SamSim is the closed loop simulation model used for calculation of the projection based LRPs. A model overview and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). This appendix decribes the model equations relevant to the Interior Fraser coho salmon and West coast Vancouver Island chinook salmon study cases. The model indexes and quantities are defined in Table \@ref(tab:modvar) and input parameters used for the Interior Fraser Coho study case are listed in Table \@ref(tab:parval). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
 
 
 <!----> 
@@ -126,7 +126,7 @@ knitr::include_graphics('figure/cohofreshwatersurvivaldiagram.png')
 ```
 
 
-Recruitment estimates produced for either formulation of the Ricker model are capped. The default cap is  $3 \cdot S_eq$, but the scalar can be modified by the user via the $RSc$ variable (equation \@ref(eq:reccapscalar)). In addition, if the generated recruitment is lower than the user defined extinction threshhold, then Recruitment is set to zero.  
+Recruitment estimates produced for either formulation of the Ricker model are capped. The default cap is  $3 \cdot S_eq$, but the scalar can be modified by the user via the $RSc$ variable (Equation \@ref(eq:reccapscalar)). In addition, if the generated recruitment is lower than the user defined extinction threshhold, then Recruitment is set to zero.  
 
 \begin{align}
   S_{eq} &= \alpha_{k}/\beta_{k}\\
@@ -134,10 +134,17 @@ Recruitment estimates produced for either formulation of the Ricker model are ca
   (\#eq:reccapscalar)
 \end{align}
 
-In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". The "stockRecruit" option is used for the Interior Fraser Coho study case. 
-If the "stockRecruit" option is used with the Ricker recruitment functions, then $S_msy$ and $S_{gen}$ are calculated. \textcolor{red}{ What is the reference for the $S_{MSY}$ calculation Ricker? I am not familiar with the  lambert_W0() function, I may need a bit of help explaining it). Also for the Rickersurv, why is $Survinit_{k} used, and not $Surv_{y,j}$. }. $S_{gen}$ is estimated by solving (equation \@ref(eq:Sgen)) numerically, as described by @holt_indicators_2009. 
+In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". If the "stockRecruit" option is used with the Ricker recruitment functions, then the $S_{MSY}$ and $S_{gen}$ management benchmarks are computed. When the model with the survival covariate is used,  the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks contant through time, the user inputted term $Survinit_{k}$ is used, which represents the long term average survival for the stock. $S_{MSY}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 (Equation  \@ref(eq:smsy)). $S_{gen}$ is estimated by solving (equation \@ref(eq:Sgen)) numerically, as described by @holt_indicators_2009. 
 
 
+\begin{align}
+{\alpha_{k}}^\prime &=
+\begin{cases}
+ \alpha_{k} + \gamma_{k}\cdot log(Survinit_{k}) & \text{ Ricker with survival} \\
+  \alpha_{k}  & \text{Simple Ricker}
+\end{cases}  
+  (\#eq:alphamb)
+\end{align}
 
 \begin{align}
   S_{MSY} &= (1 - lambertW(e^{1-\alpha_{k}}))/\beta_{k}
