--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -7,7 +7,7 @@ After that, all subsequent sections will be turned into appendices. -->
 SamSim is the closed loop simulation model used for calculation of the projection based LRPs. A model overview and the code can be found in project [github page](https://github.com/Pacific-salmon-assess/samSim/tree/LRP). This appendix decribes the model equations relevant to the Interior Fraser coho salmon and West coast Vancouver Island chinook salmon study cases. The model indexes and quantities are defined in Table \@ref(tab:modvar) and input parameters used for the Interior Fraser Coho study case are listed in Table \@ref(tab:parval). Detailed definitions of the input data and parameters are provided in the project [README](https://github.com/Pacific-salmon-assess/samSim/tree/LRP#readme). 
 
 
-<!----> 
+
 \begin{table}[ht]
 \caption{List of samSim model indexes and variables.}
 \begin{tabular}{ll}
@@ -80,10 +80,10 @@ When Recruitment data is not available, the 'nPrime' is set to 10x the maximum a
 \end{align}
 
 
-Random variability is added to the age structure of the population following a multivariate logistic error multivariate logistic error. The age structure error can vary or be held constant among CUs. 
-<!-- cite (Schnute and Richards 1995, eqns.S.9 and S.10) --> 
+Random variability is added to the proportions at age of the population following a multivariate logistic error structure (@schnute_influence_1995). The age structure error can vary or be held constant among CUs. 
 
-Three versions of the recruitment curve are available: A simple Ricker curve (equation \@ref(eq:Rickersimple) with $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with freshwater survival covariate (equation \@ref(eq:Rickersurv)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve. The error structure follows a Multivariate t distibution, with mean 0, covariance matrix provided by the user and 1000 degrees of freedom, i.e., approaching a multivariate normal distribution (equation \@ref(eq:CUautocorr)). The parameters for the recruitment curve are unique for each CU and are specified by the user. Parameters can be fixed for all simulation trials or sampled from a posterior distribution. 
+
+Three versions of the recruitment curve are available: A simple Ricker curve (equation \@ref(eq:Rickersimple) with $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with freshwater survival covariate (equation \@ref(eq:Rickersurv)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve.  Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (equation \@ref(eq:CUautocorr)). The parameters for the recruitment curve are unique for each CU and are specified by the user. Parameters can be fixed for all simulation trials or sampled from a posterior distribution. 
 
 \begin{align}
   RBY_{y,k} &= S \cdot e^{\alpha{k} - \beta{k} \cdot S + w_{y,k} - \frac{sig_{k}^{2}}{2}}\\
@@ -99,7 +99,7 @@ Three versions of the recruitment curve are available: A simple Ricker curve (eq
 \end{align}
 
 \begin{equation}
-  v_{y,k} \sim Multivariate t(\mu=0,covMat,df=1000)
+  v_{y,k} \sim N(\mu=0,covMat)
   (\#eq:CUautocorr)
 \end{equation}
 
@@ -126,7 +126,7 @@ knitr::include_graphics('figure/cohofreshwatersurvivaldiagram.png')
 ```
 
 
-Recruitment estimates produced for either formulation of the Ricker model are capped. The default cap is  $3 \cdot S_eq$, but the scalar can be modified by the user via the $RSc$ variable (Equation \@ref(eq:reccapscalar)). In addition, if the generated recruitment is lower than the user defined extinction threshhold, then Recruitment is set to zero.  
+Recruitment estimates produced for either formulation of the Ricker model are capped. The default cap is  $3 \cdot S_eq$, but the scalar can be modified by the user via the $RSc$ variable (Equation \@ref(eq:reccapscalar)). In addition, if the generated recruitment is lower than the user defined extinction threshold, then Recruitment is set to zero.  
 
 \begin{align}
   S_{eq} &= \alpha_{k}/\beta_{k}\\
@@ -138,7 +138,7 @@ Recruitment estimates produced for either formulation of the Ricker model are ca
 
 In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". For all three options, lower and upper benchmarks are calculated.
 
- If the "stockRecruit" option is used with the Ricker recruitment functions, then the lower benchmak is set to  $S_{gen}$ and the upper benchmark is set to 80\% of$S_{MSY}$. When the model with the survival covariate is used, the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks contant through time, the user inputted term $Survinit_{k}$ is used, which represents the long term average survival for the stock. $S_{MSY}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 (Equation  \@ref(eq:smsy)). $S_{gen}$ is estimated by solving (equation \@ref(eq:Sgen)) numerically, as described by @holt_indicators_2009. 
+ If the "stockRecruit" option is used with the Ricker recruitment functions, then the lower benchmark is set to  $S_{gen}$ and the upper benchmark is set to 80\% of$S_{MSY}$. When the model with the survival covariate is used, the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the user inputted term $Survinit_{k}$ is used, which represents the long term average survival for the stock. $S_{MSY}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 (Equation  \@ref(eq:smsy)). $S_{gen}$ is estimated by solving (equation \@ref(eq:Sgen)) numerically, as described by @holt_indicators_2009. 
 
 
 \begin{align}
@@ -180,19 +180,19 @@ In the priming phase, all observations are set equal to the true simulation valu
 
 ### Projections
 
-The projection phase is the phase where all scenarios and management procedures are implemented. The following description follows the order of the code implementation, therefore the subheadings in this section could be seen as pseudocode. The projsections run for each trial from year `nPrime + 1` to `nYears` 
+The projection phase is the phase where all scenarios and management procedures are implemented. The following description follows the order of the code implementation, therefore the subheadings in this section could be seen as pseudo code. The projections run for each trial from year `nPrime + 1` to `nYears`, the latter being the number of projection years defined by the user. 
 
 #### Population Dynamics submodel
 
 ##### Specify alpha
 
-Samsim offers the option of presenting trends in the productivity parameter, $\alpha$, if that is true, alpha for each CU is adjusted every year by applying a linear trend to the alpha value. The slope of this trend is defined by the input option `prodRegime`. A detailed description of the calculationa associated with productivity trends is out of the scope of this report as the study cases do not include scenarios with productivity changes. As the productivity parameter is held constant throughout the projections, we will continue to use the time-invariant notation ($\alpha_{k}$) for the parameter in the sections to follow. 
+At this step the alpha parameter for each year is defined. Samsim offers the option of presenting trends in the productivity parameter, $\alpha$, if that is true, alpha for each CU is adjusted every year by applying a linear trend to the alpha value. The slope of this trend is defined by the input option `prodRegime`. A detailed description of the algorithm used to generate productivity trends is out of the scope of this report as the study cases do not include scenarios with productivity changes. As the productivity parameter is held constant throughout the projections, we will continue to use the time-invariant notation ($\alpha_{k}$) for the parameter in the sections to follow. 
 
 ##### Specify Management benchmarks
 
 Once $\alpha_{k}$ is specified, the management benchmarks are set for the projection year. The management bechmarks can be re-estimated every year or set by the normative period, i.e., last year of the priming phase. The study cases in this report use the normative period management benchmarks.
 
-*\textcolor{red}{CW: what happens id the habitat benchmarks are chosen? - onlu Smsy and sgen were specified here}*
+*\textcolor{red}{CW: what happens if the habitat benchmarks are chosen? - onlu Smsy and sgen were specified here}*
  
 #### Observation submodel - previous years of abundance
 
