--- a/caseStudyWP/09-appendixsamSim.Rmd
+++ b/caseStudyWP/09-appendixsamSim.Rmd
@@ -20,13 +20,19 @@ $k$ & Conservation Unit (CU)\\
 $S_{y,k}$ & Spawners \\
 $RY_{y,k}$ & Calendar Year Recruits \\
 $Ra_{y,k,j}$ & Age specific brood year Recruits \\
-$RBY_{y,k}$ & Total brood year Recruits \\
+$R_{y,k}$ & Total brood year Recruits \\
 $C_{y,k}$ & Catch \\
 $ER_{y,k}$ & Exploitation rate \\
 $\alpha_{k}$ & Ricker productivity parameter\\
 $\beta_{k}$ & Ricker carrying capacity inverse\\ 
 $\sigma_{k}$ & Recruitment model standard deviation\\
 $w_{y,k}$ & Recruitment deviations\\
+$ppn_{y,k,j}$ & true proportions returns at age\\
+$obsppn_{y,k,j}$ & observed proportions returns at age\\
+$FctRY_{y,k}$ & Calendar year Recruits forecast\\
+$Fct_{y,k}$ & Forecast scaler\\
+$RYMU_{y,k}$ & Calendar year recruitment aggregated by management unit \\
+$FctRYMU_{y,k}$ & Calendar year recruitment forecast aggregated by management unit \\
 \hline
 (\#tab:modvar)
 \end{tabular}
@@ -47,6 +53,9 @@ $\sigma_{k}$ & Recruitment model standard deviation & alpha & mcmc sample\\
 $\gamma_{k}$ & Recruitment model standard deviation & alpha & mcmc sample\\
 $RSc$ & Scalar used to cap High recruitment values & CapScalar &3\\
 $\rho$ & temporal autocorrealtion coefficient & rho & 0\\
+$\tau$ & variance parameter for multivariate logistic error around proportions at age\\
+$\mu_{Fct}$ & Forecast scaler mean  &meanForecast & NA\\
+$\sigma_{Fct}$ & Forecast scaler standard deviation & sdForecast & NA\\
 \hline
 \end{tabular}
 (\#tab:parval)
@@ -86,15 +95,15 @@ Random variability is added to the proportions at age of the population followin
 Three versions of the recruitment curve are available: A simple Ricker curve (equation \@ref(eq:Rickersimple) with $\rho = 0$), Ricker curve with temporal autocorrelation in recruitment error (equation \@ref(eq:Rickersimple)), and Ricker curve with freshwater survival covariate (equation \@ref(eq:Rickersurv)). Recruitment error is assumed to be correlated among CUs for all versions of the Ricker curve.  Random recruitment deviates can be generated with multivariate t or multivariate normal distributions, that can be symmetric or skewed. The study cases used in this report all assume that recruitment deviates come from a symmetrical multivariate normal distribution (equation \@ref(eq:CUautocorr)). The parameters for the recruitment curve are unique for each CU and are specified by the user. Parameters can be fixed for all simulation trials or sampled from a posterior distribution. 
 
 \begin{align}
-  RBY_{y,k} &= S \cdot e^{\alpha{k} - \beta{k} \cdot S + w_{y,k} - \frac{sig_{k}^{2}}{2}}\\
+  R_{y,k} &= S_{y,k} \cdot e^{\alpha{k} - \beta{k} \cdot S_{y,k} + w_{y,k} - \frac{\sigma_{k}^{2}}{2}}\\
   w_{y=1,k} &= 0 * \rho + v_{y,k} \\
   w_{y>1,k} &= w_{y-1,k} * \rho + v_{y,k} 
   (\#eq:Rickersimple)
 \end{align}
 
 \begin{align}
-  Ra_{y,k,j} &= Propage_{j} \cdot S \cdot e^{\alpha{k} - \beta{k} \cdot S + \gamma_{k} \cdot Surv_{y,j} + w_{y,k} - \frac{\sigma_{k}^{2}}{2}}\\
-  RBY_{y,k} &= \sum^{j}Ra_{y,k,j}
+  Ra_{y,k,j} &= ppn_{j} \cdot S \cdot e^{\alpha{k} - \beta{k} \cdot S + \gamma_{k} \cdot Surv_{y,j} + w_{y,k} - \frac{\sigma_{k}^{2}}{2}}\\
+  R_{y,k} &= \sum^{j}Ra_{y,k,j}
   (\#eq:Rickersurv)
 \end{align}
 
@@ -130,7 +139,7 @@ Recruitment estimates produced for either formulation of the Ricker model are ca
 
 \begin{align}
   S_{eq} &= \alpha_{k}/\beta_{k}\\
-  RBY_{y,k} &= min(RBY_{y,k} , RSc \cdot \frac{\alpha_{k}}{\beta_{k}})
+  R_{y,k} &= min(RBY_{y,k} , RSc \cdot \frac{\alpha_{k}}{\beta_{k}})
   (\#eq:reccapscalar)
 \end{align}
 
@@ -138,7 +147,7 @@ Recruitment estimates produced for either formulation of the Ricker model are ca
 
 In the priming loop, the management benchmarks are only calculated in the last two generations, i.e. if $y<nPrime-2*gen$. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". For all three options, lower and upper benchmarks are calculated.
 
- If the "stockRecruit" option is used with the Ricker recruitment functions, then the lower benchmark is set to  $S_{gen}$ and the upper benchmark is set to 80\% of$S_{MSY}$. When the model with the survival covariate is used, the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the user inputted term $Survinit_{k}$ is used, which represents the long term average survival for the stock. $S_{MSY}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 (Equation  \@ref(eq:smsy)). $S_{gen}$ is estimated by solving (equation \@ref(eq:Sgen)) numerically, as described by @holt_indicators_2009. 
+ If the "stockRecruit" option is used with the Ricker recruitment functions, then the lower benchmark is set to  $S_{gen}$ and the upper benchmark is set to 80\% of$S_{MSY}$. When the model with the survival covariate is used, the $\alpha$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the user inputted term $Survinit_{k}$ is used, which represents the long term average survival for the stock. $S_{MSY}$ is calculated following the explicit solution provided by @scheuerell_explicit_2016 (Equation  \@ref(eq:smsy)). $S_{gen}$ is estimated by solving (Equation \@ref(eq:Sgen)) numerically, as described by @holt_indicators_2009. 
 
 
 \begin{align}
@@ -190,24 +199,62 @@ At this step the alpha parameter for each year is defined. Samsim offers the opt
 
 ##### Specify Management benchmarks
 
-Once $\alpha_{k}$ is specified, the management benchmarks are set for the projection year. The management bechmarks can be re-estimated every year or set by the normative period, i.e., last year of the priming phase. The study cases in this report use the normative period management benchmarks.
+Once $\alpha_{k}$ is specified, the management benchmarks are set for the projection year. The management bechmarks can be re-estimated every year or set by the normative period, i.e., last year of the priming phase `nPrime`. The study cases in this report use the normative period management benchmarks.
 
 *\textcolor{red}{CW: what happens if the habitat benchmarks are chosen? - onlu Smsy and sgen were specified here}*
  
 #### Observation submodel - previous years of abundance
 
 
- In this step, observation error is added to numbers of spawners at age for each calendar year. Observed spawners at age for the past five calendar years is generated by multiplying the true number of returning spawners by a vector of proportions of returns at age with with multivariate logistic error
-(@schnute_influence_1995). 
-.Error is only added if the past five years do not include years in the prime period *\textcolor{red}{CW: need to check if this i correct}*
+ In this step, observation error is added to the proportion of returns at age for each brood year. The observed proportions of returns at age is given by the true proportions at age with added multivariate logistic error structure (Equation \@ref(eq:obsppn)) (@schnute_influence_1995). 
 
-obsRecBY is then calculated based on the observed 
-obsRecB hs no error added to it
+<!--
+I have questions about this section
+
+1 the error is added inside a if statement, error is only added if obsREc != true rec. I think this statement is here to prevent adding error for years before nPrime. Is that correct?
+2 It seems that the age composition error is added again at each round of the loop, i.e. for each y, obsS[y-5:y-1,] is overwritten. If that is true, the observed returns for the past five years change every year? Am I am misunderstanding/missing something? (help!) 
+
+-->
+
+The observed recruitment by brood year is then retrieved by multiplying the true recruitment at age for each brood year by vector of proportions at age with multivariate logistic error (Equation \@ref(eq:obsRa)). 
+
+
+\begin{align}
+  obsppn_{y,k,j} \sim MVlogis(ppn_{y,k,j}, \tau) 
+  (\#eq:obsppn)
+\end{align}
+
+\begin{align}
+  obsRa_{y,k,j} &= R_{y,k,j} \cdot obsppn_{y,k,j}
+  (\#eq:obsRa)
+\end{align}
+
 
 
 #### Management submodel
 
-In this step the population forecast is calculated by multiplying the observed return year recruits bt the forecast scaler, that can be either set to 1 for the perfect information scenario. Or y
+In this step, the population forecast and benchmarks are calculated. Forecast error is calculated via a scaler that is generated following a lognormal distribution with mean and variance specified by the user (Equations \@ref(eq:FctR) and \@ref(eq:Fct)). 
+
+\begin{align}
+  FctRY_{y,k} &= RY_{y,k} \cdot Fct{y,k}
+  (\#eq:FctR)
+\end{align}
+
+\begin{align}
+  Fct_{y,k} \sim logN(\mu_{Fct},\sigma_{Fct})
+  (\#eq:Fct)
+\end{align}
+
+The recruitment forecast and true recruitment are then aggregated at the management unit level (Equation \@ref(eq:MUagg)) and 
+
+\begin{align}
+  RYMU_{y,k} &= \sum^{k \in MU} $RY_{y,k}\\
+  FctRYMU_{y,k} &= \sum^{k \in MU} FctRY_{y,k}
+  (\#eq:MUagg)
+\end{align}
+
+The next step is to calculate the allowable catch following the inputs harvest control rule choice. Both study cases in this report use fixed exploitation rates as the harvest control rule.
+
 #### Second Observation submodel
 #### Assessment submodel
 #### Population Dynamics submodel again
